# element

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  cli.rs  credentials.rs  gateway.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  prompts.rs  provider.rs  types.rs
src-tauri/src/commands/: ai_commands.rs  calendar_commands.rs  cli_commands.rs  credential_commands.rs  error_log_commands.rs  execution_commands.rs  file_explorer_commands.rs  heartbeat_commands.rs  hub_chat_commands.rs  knowledge_commands.rs  manifest_commands.rs  mod.rs  notification_commands.rs  onboarding_commands.rs  phase_commands.rs  planning_sync_commands.rs  plugin_commands.rs  project_commands.rs  schedule_commands.rs  scheduling_commands.rs  shell_commands.rs  task_commands.rs  theme_commands.rs  workflow_commands.rs
src-tauri/src/credentials/: keychain.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  schema.rs
src-tauri/src/db/sql/: 001_initial.sql  002_execution.sql  003_scheduling.sql  004_workflows.sql  005_plugins_credentials_calendar.sql  006_ai_scheduling.sql  007_themes.sql  008_phases.sql  009_ai_onboarding.sql  010_cli_planning_sync.sql  011_notifications.sql  012_project_goal.sql  013_plugin_mcp_tools.sql  014_secrets.sql
src-tauri/src/engine/: executor.rs  http.rs  mod.rs  scheduler.rs  shell.rs
src-tauri/src/heartbeat/: mod.rs  risk.rs  summary.rs  types.rs
src-tauri/src/knowledge/: frontmatter.rs  index.rs  ingest.rs  lint.rs  mod.rs  query.rs  test_helpers.rs  types.rs
src-tauri/src/models/: execution.rs  manifest.rs  mod.rs  notification.rs  onboarding.rs  phase.rs  planning_sync.rs  project.rs  schedule.rs  scoring.rs  tag.rs  task.rs  theme.rs  workflow.rs
src-tauri/src/plugins/: api.rs  directory.rs  manifest.rs  mod.rs  registry.rs  skill_handler.rs
src-tauri/src/plugins/core/: calendar.rs  filesystem.rs  http.rs  knowledge.rs  mod.rs  shell.rs
src-tauri/src/scheduling/: assignment.rs  mod.rs  time_blocks.rs  types.rs
src-tauri/src/test_fixtures/: calendar_responses.rs  manifests.rs  mod.rs
(+966 files in other folders)
