[package]
name = "element"
version = "0.1.0"
description = "A task management and workflow engine"
authors = []
edition = "2021"

[lib]
name = "element_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "element"
path = "src/main.rs"

[dependencies]
tauri = { version = "~2.10", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
regex = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
