[package]
name = "element"
version = "0.1.0"
description = "A task management and workflow engine"
authors = []
edition = "2021"

[lib]
name = "element_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "element"
path = "src/main.rs"

[dependencies]
tauri = { version = "~2.10", features = ["tray-icon", "test"] }
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.15", features = ["signal"] }
cron = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"
jsonschema = "0.28"
tauri-plugin-oauth = "2"
tauri-plugin-dialog = "2"
tauri-plugin-pty = "0.2"
tauri-plugin-notification = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
open = "5"
ignore = "0.4"
url = "2"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
thiserror = "2"
tauri-plugin-fs = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
